# medical-agent

./: .gitignore  CONTRIBUTING.md  INTERVIEW_PREP.md  README.md  requirements.in  requirements.txt
app/: gradio_app.py  main.py
app/agent/: coordinator.py  executor.py  graph.py  nodes.py  numeric_parser.py  planner.py  rule_engine.py  state.py
app/api/: routes.py  rules.py
app/core/: config.py
app/eval/: metrics.py
app/kg/: __init__.py  graph_store.py
app/llm/: client.py
app/memory/: layers.py  multimodal.py  multimodal_embedder.py
app/models/: schemas.py
app/observability/: metrics.py
app/rag/: generator.py  (+5 more)
medical-agent/: Dockerfile  pyproject.toml
medical-agent/configs/: clinical_rules.json  redis.conf
medical-agent/docker/: docker-compose.eval.yml  docker-compose.redis.yml  docker-compose.vllm.yml  docker-compose.yml  run_vllm_qwen1p5b.cmd
medical-agent/scripts/: append_cache_doc.ps1  append_cache_stats_doc.ps1  build_faiss_index.py  build_faiss_index_fast.py  build_faiss_index_qa.py  build_faiss_index_qa_questions.py  build_index_stub.py  build_kg_from_qa.py  build_kg_stub.py  build_qa_filter_report.py  build_report.py  build_report_md.py  eval_citation_sentence.py  eval_faithfulness_llm.py  eval_generation.py  eval_retrieval.py  eval_retrieval_stub.py  ingest_qa_jsonl.py  ingest_raw_text.py  merge_corpus.py  prewarm_cache.py  run_api_workers.ps1  run_full_eval.cmd  run_generation_eval.py  run_gradio.cmd  run_retrieval_eval.py  run_retrieval_eval_fast.py  save_faithfulness_metrics.py  save_generation_metrics.py  save_retrieval_metrics.py
(+6 files in other folders)
